--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Christmas is coming in :</h1>
+<h1>Christmas</h1>
+    
     <div class="countdown-container">
         <div class="countdown-el">
             <p class="big-text" id ="days">0</p>
